--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,10 @@
             "request": "launch",
             "name": "Iniciar programa",
             "program": "${workspaceRoot}/dist/app.js",
-            "outFiles": []
+            "outFiles": [],
+            "sourceMaps": true,
+            "preLaunchTask": "tsc"
+
         },
         {
             "type": "node",
