--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
         "restify-jwt": "^0.4.0",
         "sequelize": "^3.30.4",
         "sequelize-cli": "^2.7.0",
-        "sqlite3": "^3.1.8"
-    },
-    "devDependencies": {
+        "sqlite3": "^3.1.8",
+
+
         "@types/jsonwebtoken": "^7.2.0",
         "@types/chai": "^3.5.0",
         "@types/chai-http": "0.0.30",
