--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-    "name": "pluma-node-api",
-    "version": "1.0.0",
-    "description": "pluma app api rest server ",
-    "main": "src/app.js",
-    "directories": {
-        "test": "tests"
-    },
-    "dependencies": {
-        "jsonwebtoken": "^7.3.0",
-        "restify": "^4.3.0",
-        "restify-jwt": "^0.4.0",
-        "sequelize": "^3.30.4",
-        "sequelize-cli": "^2.7.0",
-        "sqlite3": "^3.1.8",
-
-
-        "@types/jsonwebtoken": "^7.2.0",
-        "@types/chai": "^3.5.0",
-        "@types/chai-http": "0.0.30",
-        "@types/mocha": "^2.2.40",
-        "@types/node": "^7.0.12",
-        "@types/restify": "^2.0.42",
-        "@types/sequelize": "^4.0.49",
-        "chai": "^3.5.0",
-        "chai-http": "^3.0.0",
-        "mocha": "^3.2.0",
-        "nodemon": "^1.11.0",
-        "ts-node": "^3.0.2",
-        "typescript": "^2.2.2"
-    },
-    "scripts": {
-        "test": "mocha",
-        "start": "tsc && node ./dist/app.js",
-        "build:live": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/app.ts"
-    },
-    "author": "",
-    "license": "ISC"
+  "name": "pluma-node-api",
+  "version": "1.0.0",
+  "description": "pluma app api rest server ",
+  "main": "src/app.js",
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {
+    "@types/bcrypt": "^1.0.0",
+    "@types/chai": "^3.5.0",
+    "@types/chai-http": "0.0.30",
+    "@types/jsonwebtoken": "^7.2.0",
+    "@types/mocha": "^2.2.40",
+    "@types/node": "^7.0.12",
+    "@types/restify": "^2.0.42",
+    "@types/sequelize": "^4.0.49",
+    "bcrypt": "^1.0.2",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "jsonwebtoken": "^7.3.0",
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
+    "restify": "^4.3.0",
+    "restify-jwt": "^0.4.0",
+    "sequelize": "^3.30.4",
+    "sequelize-cli": "^2.7.0",
+    "sqlite3": "^3.1.8",
+    "ts-node": "^3.0.2",
+    "typescript": "^2.2.2"
+  },
+  "scripts": {
+    "test": "mocha",
+    "start": "tsc && node ./dist/app.js",
+    "build:live": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/app.ts"
+  },
+  "author": "",
+  "license": "ISC"
 }
